# django-shop

./: .copier-answers.yml  .env.example  .gitmodules  .pre-commit-config.yaml  .yamllint  Dockerfile  LICENSE  docker-compose.override.yml  docker-compose.yml  pyproject.toml  ruff.toml
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  celery.py  development.py  production.py
core/: apps.py  middleware.py  signals.py  tasks.py  utils.py
core/management/commands/: reset_periodic_tasks.py
docs/: CELERY_TIMEZONE.md
