[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
develop = [
  "django-debug-toolbar>=4.2.0",
  "django-extensions>=3.2.3",
  "ipython>=8.15.0",
  "werkzeug>=2.3.6",
]
linter = [
  "bandit>=1.7.5",
  "black>=23.7.0",
  "isort>=5.12.0",
  "pre-commit>=3.4.0",
  "ruff>=0.1.0",
  "safety>=2.3.4",
]
test = [
  "factory-boy>=3.3.0",
  "faker>=19.6.2",
  "freezegun>=1.2.2",
  "model-bakery>=1.17.0",
  "pytest-cov>=4.1.0",
  "pytest-django>=4.5.2",
  "pytest>=7.4.2",
]
type = [
  "django-stubs>=4.2.4",
  "mypy>=1.5.1",
  "types-python-dateutil>=2.8.19.14",
  "types-requests>=2.31.0.2",
]

[project]
authors = [
  {email = "your-email@example.com", name = "Your Name"},
]
dependencies = [
  "celery>=5.3.2",
  "django-celery-beat>=2.6.0",
  "django-environ>=0.10.0",
  "django-redis>=5.3.0",
  "django>=5.0.8",
  "gunicorn>=21.2.0",
  "pillow>=10.0.0",
  "psycopg[binary]>=2.9.7",
  "python-dateutil>=2.8.2",
  "pytz>=2023.3",
  "redis>=4.6.0",
  "sentry-sdk>=1.32.0",
  "whitenoise>=6.5.0",
]
description = "A modern, production-ready Django 5 project structure with best practices, modular architecture, and comprehensive tooling."
license = {text = "MIT"}
name = "django-scaffold"
requires-python = ">=3.11"
version = "0.1.0"

[tool.black]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''
include = '\.pyi?$'
line-length = 120
target-version = ['py311']

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.hatch.build]
packages = ["apps", "config", "core"]

[tool.isort]
known_django = "django"
known_first_party = ["apps", "config", "core"]
line-length = 120
multi_line_output = 3
profile = "black"
sections = ["DJANGO", "FIRSTPARTY", "FUTURE", "LOCALFOLDER", "STDLIB", "THIRDPARTY"]

[tool.mypy]
disallow_any_unimported = true
# Django settings
plugins = ["mypy_django_plugin.main"]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "debug_toolbar.*",
  "django_extensions.*",
  "factory.*",
  "faker.*",
  "freezegun.*",
  "model_bakery.*",
]

[[tool.mypy.overrides]]
ignore_errors = true
module = [
  "*.migrations.*",
  "django.*",
  "manage",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
addopts = [
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov=apps",
  "--cov=core",
  "--reuse-db",
]
python_files = ["*_tests.py", "test_*.py", "tests.py"]

[tool.tomlsort]
all = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true

[tool.uv]
default-groups = [
  "develop",
  "linter",
  "test",
  "type",
]
package = true
required-version = ">=0.4.0"
